Fixing logo alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -172,6 +172,6 @@ a {
     display: inline-block;
     float: left;
     margin-right: 4rem;
-    margin-bottom: 10rem;
+    margin-bottom: 20rem;
   }
 }
